# fax

./: README.md
contracts/: foundry.toml
contracts/src/: FAXAnchor.sol  FAXEscrow.sol
contracts/src/interfaces/: IFAX.sol
contracts/test/: FAXAnchor.t.sol  FAXEscrow.t.sol  FAXReputation.t.sol
crates/fax-anp/: Cargo.toml
crates/fax-anp/src/: discovery.rs  lib.rs  transport.rs
crates/fax-chain/src/: lib.rs
crates/fax-cli/src/: commands.rs
crates/fax-openfang/src/: agent.rs  audit.rs  tools.rs
crates/fax-protocol/: Cargo.toml
crates/fax-protocol/src/: lib.rs  trade.rs
crates/fax-types/src/: credential.rs  error.rs  identity.rs  resource.rs
fax-network/: .gitignore  Cargo.toml  README.md
fax-network/anp/: arex-interface.json
fax-network/contracts/script/: Deploy.s.sol
fax-network/contracts/src/: FAXReputation.sol
fax-network/crates/fax-anp/src/: agent_description.rs  did_bridge.rs  meta_protocol.rs
fax-network/crates/fax-chain/: Cargo.toml
fax-network/crates/fax-chain/src/: anchor.rs  client.rs  escrow.rs  reputation.rs
fax-network/crates/fax-cli/: Cargo.toml
fax-network/crates/fax-cli/src/: main.rs
fax-network/crates/fax-openfang/: Cargo.toml
fax-network/crates/fax-openfang/src/: capabilities.rs  config.rs  lib.rs
fax-network/crates/fax-protocol/src/: negotiation.rs  swap.rs
fax-network/crates/fax-types/: Cargo.toml
fax-network/crates/fax-types/src/: lib.rs  rcu.rs
fax-network/openfang/: HAND.toml
fax-network/schemas/: discovery.jsonld
fax-network/schemas/credentials/: swap-agreement.jsonld
openfang/: config-snippet.toml  integration-patch.md
schemas/: resource-profile.jsonld
schemas/credentials/: resource-lock.jsonld
