[workspace]
members = [
    "crates/fax-types",
    "crates/fax-protocol",
    "crates/fax-chain",
    "crates/fax-anp",
    "crates/fax-openfang",
    "crates/fax-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fax-network/fax"

[workspace.dependencies]
fax-types = { path = "crates/fax-types" }
fax-protocol = { path = "crates/fax-protocol" }
fax-chain = { path = "crates/fax-chain" }
fax-anp = { path = "crates/fax-anp" }
fax-openfang = { path = "crates/fax-openfang" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
