[package]
name = "fax-anp"
description = "ANP (Agent Network Protocol) integration layer for FAX — transport, discovery, meta-protocol, and identity bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fax-types = { workspace = true }
fax-protocol = { workspace = true }
fax-chain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
