[package]
name = "fax-protocol"
description = "Trading protocol engine for FAX: swap lifecycle, negotiation, and credential chain management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fax-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
