[package]
name = "fax-cli"
description = "CLI tool for the FAX (Fast Agent Exchange) network"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fax"
path = "src/main.rs"

[dependencies]
fax-types = { workspace = true }
fax-protocol = { workspace = true }
fax-chain = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
