[package]
name = "fax-openfang"
description = "OpenFang runtime integration for FAX — tools, capabilities, audit, and agent Hand"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fax-types = { workspace = true }
fax-protocol = { workspace = true }
fax-chain = { workspace = true }
fax-anp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
